# report

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml
.claude/commands/: commit.md  daily_report.md  weekly_report.md  wrap.md
.claude/skills/prompt-regression-testing/: SKILL.md
.claude/skills/prompt-regression-testing/templates/: run_regression.sh  score_runs.py
deploy/: report.crontab.tmpl
docs/superpowers/plans/: 2026-04-27-create-page-slack-notification.md
docs/superpowers/specs/: 2026-04-27-create-page-slack-notification-design.md
examples/: sdk_spike.py
scripts/: preflight.sh
src/: main.py
src/application/: create_page_use_case.py  ports.py  use_cases.py  weekly_summary_use_case.py
src/domain/: models.py  services.py
src/infrastructure/: config.py
src/infrastructure/adapters/: cli_executors.py  confluence_adapter.py  page_transformer.py  report_generator.py  slack_adapter.py  stdout_adapter.py
tests/: conftest.py
tests/integration/: test_main.py  test_main_weekly.py
tests/regression/fixtures/: ground_truth_2026_05_15.json  rubric.md
tests/regression/scripts/: compare_runs.py  run_regression.sh  score_runs.py
tests/unit/: test_main.py
tests/unit/application/: test_create_page_use_case.py  test_use_cases.py  test_weekly_summary_use_case.py
tests/unit/domain/: test_create_page_status.py  test_models.py  test_services.py
tests/unit/infrastructure/: test_config.py
tests/unit/infrastructure/adapters/: test_cli_executors.py  test_cli_executors_weekly.py  test_confluence_adapter.py  (+4 more)
