[project]
name = "summarizer-weekly"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.7",
    "python-dotenv>=1.1.1",
    "slack-sdk>=3.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
]
